--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,19 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0"
+        "php": "^7.2|^7.3|^7.4|^8.0|^8.1|^8.2",
+        "ext-openssl": "*",
+	  	"ext-json": "*",
+        "http-interop/http-factory-guzzle": "^1.0",
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
+        "omnipay/common": "^3.0",
+        "omnipay/tests": "^4.1",
+        "payuni/sdk": "^1.1",
+        "symfony/http-client": "^4.0|^5.0|^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0"
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "phpunit/phpunit": "^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
@@ -34,9 +43,11 @@
     "scripts": {
         "test": "vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
-
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     }
 }
