change pkg name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "omnipay/payuni",
+    "name": "slps970093/omnipay-payuni",
     "description": "payuni driver for the Omnipay payment processing library",
     "keywords": [
         "omnipay",
