--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,6 @@
         "ext-openssl": "*",
 	  	"ext-json": "*",
         "http-interop/http-factory-guzzle": "^1.0",
-        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
         "omnipay/common": "^3.0",
         "omnipay/tests": "^4.1",
         "payuni/sdk": "^1.1",
@@ -28,6 +27,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
+        "mockery/mockery": "^1.3|^1.4|^1.5",
         "phpunit/phpunit": "^8.0|^9.0"
     },
     "autoload": {
