--- a/composer.json
+++ b/composer.json
@@ -16,19 +16,19 @@
         }
     ],
     "require": {
-        "php": "^7.2|^7.3|^7.4|^8.0|^8.1|^8.2",
+        "php": "^7.2|^7.3|^7.4|^8.0|^8.1|^8.2|^8.3",
         "ext-openssl": "*",
 	  	"ext-json": "*",
         "http-interop/http-factory-guzzle": "^1.0",
         "omnipay/common": "^3.0",
         "omnipay/tests": "^4.1",
         "payuni/sdk": "^1.1",
-        "symfony/http-client": "^4.0|^5.0|^6.0"
+        "symfony/http-client": "^4.0|^5.0|^6.0|^7.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
-        "mockery/mockery": "^1.3|^1.4|^1.5",
-        "phpunit/phpunit": "^8.0|^9.0"
+        "mockery/mockery": "^1.3|^1.4|^1.5|^1.6",
+        "phpunit/phpunit": "^8.0|^9.0|^10.0"
     },
     "autoload": {
         "psr-4": {
